# fastapi-demo-app

./: .env.example  .gitignore  README.md  TODO.md  backend-start.sh  config.yml  db_new.rtf  deploy.sh  package-lock.json  package.json  project_config.yml  run  start-dev.sh
backend/: .env.example  Dockerfile  Makefile  README.md  TODO.md  app.py  cloudbuild.yaml  firebase.json  main.py  notebook.ipynb  pyproject.toml  run.py  temp.py  test.py
backend/src/: auth_middleware.py  auth_router.py  config_utils.py  constants.py  cookie.py  db.py  test.py  transaction_router.py
backend/src/api/: auth_middleware.py  auth_route.py
backend/src/api/auth/: auth_route.py
backend/src/auth/: jwt_auth_dependencies.py  session_auth_dependencies.py  wristband.py  wristband_auth.py
backend/src/clients/: wristband_client.py
backend/src/middleware/: auth_middleware.py  encrypted_session_middleware.py  jwt_auth_middleware.py  session_cookie_auth_middleware.py  session_middleware.py
backend/src/models/: auth.py  login.py  schemas.py  session_data.py
backend/src/routes/: __init__.py  auth_routes.py  hello_world_routes.py  nickname_routes.py  protected_routes.py  session_routes.py  token_routes.py
backend/src/sdk/: auth_service.py  cookie_encryptor.py  models.py  utils.py  wristband_service.py
backend/src/service/: auth_service.py
backend/src/services/: wristband_service.py
backend/src/utils/: config_utils.py  csrf.py  nicknames.py  session.py
backend/tests/: test_db.py
backend/wristband/: api.py  auth.py  auth_service.py  cookie_encryptor.py  enums.py  models.py  utils.py
database/: firebase.json  run.js  update-firebase-port.js
frontend/: .firebaserc  firebase.json  index.html  next.config.js  next.config.ts  package-lock.json  package.json  run-dev.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: _error.js  next-font-manifest.js
frontend/scripts/: run-dev.js
frontend/src/: index.css  index.tsx
frontend/src/client/: frontend-api-client.ts
frontend/src/components/: ExampleApiComponent.tsx  TransactionPortal.tsx  WristbandTestComponents.tsx  auth-status.tsx  hello-world-tester.tsx  index.ts  login-button.tsx  logout-button.tsx  nickname-generator.tsx  tab-button.tsx
frontend/src/context/: auth-context.tsx
frontend/src/images/: index.ts
frontend/src/lib/: authConfig.ts  config.ts
infrastructure/: README.md  cicd.tf  cloud_run.tf  firestore.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: run-database.js
(+25 files in other folders)
