[project]
name = "fastapi-demo-app-backend"
version = "0.1.0"
description = "Python FastAPI server that integrates Wristband authentication."
authors = [
    {name = "Wristband",email = "info@wristband.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "pytest>=8.3.4,<9.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "requests>=2.32.3,<3.0.0",
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "wristband==4.3.3",
    "pyyaml>=6.0.2,<7.0.0"
]
