[project]
name = "fastapi-demo-app-backend"
version = "0.1.0"
description = "Python FastAPI server that integrates Wristband authentication."
authors = [
    {name = "Wristband",email = "support@wristband.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv>=1.0.1,<2.0.0",
    "uvicorn>=0.34.0,<0.35.0",
    "wristband==4.3.3",
]
